--- a/src/pages/Onboarding.css
+++ b/src/pages/Onboarding.css
@@ -15,6 +15,13 @@
   overflow-y: auto; /* Enable scrolling */
 }
 
+.double-button{
+  width: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+}
+
 /* Animasi dan efek untuk logo */
 .logo-container {
   margin-bottom: 20px;
