--- a/src/pages/UserForm.css
+++ b/src/pages/UserForm.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 20px;
   background-color: #f0f0f0;
+  margin-top: 80px;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
