--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -2,11 +2,11 @@
 
 .Box {
     width: 300px;
-    background: linear-gradient(135deg, #333, #111);
+    background: white;
     border-radius: 15px;
     color: #fff;
     padding: 20px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 4px 20px rgba(118, 202, 168, 0.3);
     font-family: Arial, sans-serif;
 }
 
@@ -14,11 +14,13 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    color: rgb(22, 38, 7);
 }
 
 .title {
     font-size: 1.1rem;
     font-weight: bold;
+    color: rgb(231, 122, 63);
 }
 
 /* Slider styling */
@@ -51,6 +53,7 @@
 
 .footer {
     text-align: center;
+    color: black;
 }
 
 .claim-text {
@@ -66,9 +69,9 @@
 
 .register-button {
     padding: 10px 20px;
-    font-size: 1rem;
-    color: #333;
-    background-color: #fff;
+    font-size: 1.1rem;
+    color:rgb(231, 122, 63);
+    background-color: #b8e6e6ad;
     border: none;
     border-radius: 5px;
     cursor: pointer;
