--- a/src/pages/AuthPage.css
+++ b/src/pages/AuthPage.css
@@ -13,12 +13,13 @@
   }
   
   .auth-card {
-    background: linear-gradient(135deg, #333, #111); /* Matching the Box background gradient */
+    width: 300px;
+    background: white;
     border-radius: 15px;
     color: #fff;
     padding: 20px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3); /* Matching Box shadow */
-    font-family: Arial, sans-serif;
+    box-shadow: 0px 4px 20px rgba(118, 202, 168, 0.3);
+    font-family: Arial, sans-serif;/* Matching the Box background gradient */
     width: 100%;
     max-width: 350px;
     margin: 0 auto;
