--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,13 +1,15 @@
 /* src/components/Box.css */
 
 .Box {
-    width: 300px;
-    background: white;
+    width: 320px;
     border-radius: 15px;
     color: #fff;
     padding: 20px;
     box-shadow: 0px 4px 20px rgba(118, 202, 168, 0.3);
     font-family: Arial, sans-serif;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(8px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .header {
@@ -15,12 +17,14 @@
     align-items: center;
     margin-bottom: 20px;
     color: rgb(22, 38, 7);
+    justify-content: center;
 }
 
 .title {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     font-weight: bold;
     color: rgb(231, 122, 63);
+    margin-bottom: 0px;
 }
 
 /* Slider styling */
@@ -49,11 +53,6 @@
 .coin-icon {
     font-size: 2rem;
     margin-right: 10px;
-}
-
-.footer {
-    text-align: center;
-    color: black;
 }
 
 .claim-text {
