--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -21,10 +21,12 @@
 }
 
 .title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: rgb(231, 122, 63);
-    margin-bottom: 0px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #45c18a;
+  text-align: center;
+  margin-bottom: 0px;
+  text-shadow: 0 2px 5px rgba(255, 255, 255, 0.4);
 }
 
 /* Slider styling */
@@ -56,28 +58,37 @@
 }
 
 .claim-text {
-    font-size: 0.9rem;
-    color: #bbb;
+    font-size: 1rem;
     margin-bottom: 5px;
+    color: #000000;
+    font-weight: 700;
 }
 
 .register-text {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     margin-bottom: 20px;
+    color: #6a6a6a;
 }
 
 .register-button {
-    padding: 10px 20px;
-    font-size: 1.1rem;
-    color:rgb(231, 122, 63);
-    background-color: #b8e6e6ad;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  background: #ff7f3f;
+  color: #fff;
+  font-weight: 600;
+  padding: 14px 28px;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: all 0.3s ease;
 }
 
 .register-button:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.Box .footer {
+    background: #00000000;
+    box-shadow: none;
+    border-top: none;
 }
