--- a/src/pages/UserForm.css
+++ b/src/pages/UserForm.css
@@ -28,6 +28,11 @@
   box-shadow: 0 6px 18px rgba(0,0,0,.12);
   width: 95%;
   max-width: 700px;
+  margin-bottom: 2rem;
+}
+
+.alert-needs{
+  margin: 8rem 0;
 }
 
 .title { text-align:center; font-weight:700; color:var(--orange); }
